# browser-use-rs

./: .gitignore
browser-use-rs/: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  PHASE2_PROGRESS.md  QUICK_REFERENCE.md
browser-use-rs/crates/browser/: Cargo.toml  DOCUMENTATION_GUIDE.md  DOM_INTEGRATION.md  HANDOFF_COMPLETE.md  IMPLEMENTATION_HISTORY.md  INDEX.md  NEXT_AI_START_HERE.md  README.md  WATCHDOG_IMPLEMENTATION_GUIDE.md
browser-use-rs/crates/browser/examples/: basic_cdp.rs  session_management.rs
browser-use-rs/crates/browser/src/: events.rs  lib.rs  session.rs  watchdog.rs
browser-use-rs/crates/browser/src/cdp/: client.rs  mod.rs  protocol.rs  session.rs
browser-use-rs/crates/browser/src/watchdogs/: crash.rs  downloads.rs  mod.rs  security.rs
browser-use-rs/crates/dom/: Cargo.toml
browser-use-rs/crates/dom/src/: arena.rs  error.rs  lib.rs  serializer.rs  service.rs  types.rs  utils.rs
