[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v7", "serde"] }
tracing = "0.1"
async-trait = "0.1"
dashmap = "6.1"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "basic_cdp"
path = "examples/basic_cdp.rs"

[[example]]
name = "session_management"
path = "examples/session_management.rs"
