[package]
name = "dom"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
smallvec = { version = "1.13", features = ["serde"] }
ahash = "0.8"
bumpalo = "3.14"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
